--- a/ckeditor/contents.css
+++ b/ckeditor/contents.css
@@ -26,7 +26,9 @@ body
 	/* Fix for missing scrollbars with RTL texts. (#10488) */
 	word-wrap: break-word;
 }
-
+img{
+	width:100%;
+}
 blockquote
 {
 	font-style: italic;
