--- a/popper/less.less
+++ b/popper/less.less
@@ -54,7 +54,7 @@ img {
             @current: mod(@index, length(@framelist)) + 1;
             @{framepos}{ 
                 @props: extract(@framelist, @current); 
-                @props(); 
+                @props()
             } 
         }
         .mixin (@index) when (@index<=(@alllength - @listlength)) and (@index>@listlength) {
@@ -69,8 +69,8 @@ img {
             @framepos: 50 + 50 /pow((@listlength),2) * pow((@index - (@alllength - @listlength)),2)  * 1%; 
             @cuutent: mod(@index, length(@framelist)) + 1;
             @{framepos}{ 
-                @props: extract(@framelist, @cuutent); 
-                @props(); 
+              @props: extract(@framelist, @cuutent); 
+              @props(); 
             } 
         }
         .mixin(@index);
@@ -79,12 +79,15 @@ img {
     @keyframes @name{ 
         .loop-framelist(0); 
     } 
+
     @-moz-keyframes  @name{ 
         .loop-framelist(0); 
-    } 
+    }
+
     @-webkit-keyframes  @name{ 
         .loop-framelist(0); 
-    } 
+    }
+     
     @-o-keyframes  @name{ 
         .loop-framelist(0); 
     } 
@@ -97,17 +100,20 @@ img {
 // {top: 200px; left: 100px;},
 // {top: 200px; left: 0px;},
 // {top: 100px; left: 0px;};
-@position1:{top: 0; left: 0px;};
-@position2:{top: 0; left: 100px;};
-@position3:{top: 0; left: 200px;};
-@position4:{top: 100px; left: 200px;};
-@position5:{top: 200px; left: 200px;};
-@position6:{top: 200px; left: 100px;};
-@position7:{top: 200px; left: 0px;};
-@position8:{top: 100px; left: 0px;};
+
+
+@position1:{transform: translate(-100%,-100%);};
+@position2:{transform: translate(0%,-100%);};
+@position3:{transform: translate(100%,-100%);};
+@position4:{transform: translate(100%,0%);};
+@position5:{transform: translate(100%,100%);};
+@position6:{transform: translate(0%,100%);};
+@position7:{transform: translate(-100%,100%);};
+@position8:{transform: translate(-100%,0%);};
 @position:@position1,@position2,@position3,@position4,@position5,@position6,@position7,@position8;
+
 .generickeyframe(loader1; 
     @position;
     6;
     3
-); 
+)
